# sat_platform

./: .gitignore  README.md  lista_rutas.txt  mypy.ini  pyproject.toml  pytest.ini
.claude/: ATLAS.md  SESION.md
.claude/skills/: fin.md  inicio.md  sync.md
.claude/skills/atlas/: SKILL.md
.claude/skills/fin/: SKILL.md
.claude/skills/inicio/: SKILL.md
.claude/skills/sync/: SKILL.md
docs/: pipeline-layout.md  spectral-explorer.md
examples/: using_catalog_port.py
legacy/: .env.example  env_config.py  f_functions.py
legacy/config/: config_bandas.json  config_bandas_v2.json  config_bandas_v3.json
legacy/data/Laguna-Seca/: McalHSL_mod_v20_aux.csv  McalHSL_mod_v2_py.csv  McalHSL_mod_v3_py.csv  McalHSL_mod_v4_py.csv  McalHSL_mod_v5_py.csv  McalHSL_mod_v7_py.csv  McalHSL_mod_v7_py_utm.csv  McalHSL_mod_v7_py_utm.geojson  Mcal_Orig_py.csv  Mcal_py.csv
legacy/scripts/: g_Sat_SpectralSignature.py  g_Sat_SpectralSignature_v2.py  g_Sat_SpectralSignature_v3.py  g_Sat_SpectralSignature_v4.py  g_Sat_SpectralSignature_v4_2.py  s_Sat_ClassMap_v2.py  s_Sat_ClassMap_v3.py  s_Sat_ClassMap_v4.py  s_Sat_ClassMap_v5.0.py  s_Sat_ClassMap_v5.1.py  s_Sat_ClassMap_v6.py  s_Sat_ClassMap_v7.11.py  s_Sat_ClassMap_v7.12.py  s_Sat_ClassMap_v7.2.py  s_Sat_ClassMap_v8.py  s_Sat_ClassMap_v9.py  s_Sat_ClassMap_v9p2.py  s_Sat_ExploreFolder.py  s_Sat_HSL_RGB.py  s_Sat_McalAddUTM.py  s_Sat_Mcal_PixelSave.py  s_Sat_PixelClass.py  s_Sat_PixelClass_Color-example.py  s_Sat_PixelClass_v3_plotly.py  s_Sat_PixelClass_v4.py  s_Sat_PixelClass_v5.py  s_Sat_PixelClass_v6.0.py  s_Sat_PixelClass_v6.1.py  s_Sat_PixelClass_v6.2.py  s_Sat_PixelClass_v6.3.py  s_Sat_fil2ROI.py  s_Sat_temporal_rrn_pif_v2.py  s_Sat_temporal_rrn_pif_v3.py
src/satplatform/: cli-v2.py  cli.py  composition.py  config.py
src/satplatform/adapters/: cosine_classifier.py  csv_catalog.py  csv_exporter.py  euclidean_classifier.py  gdal_raster_reader.py  gdal_raster_writer.py  gdalwarp_cli.py  georef_fixing_raster_reader.py  legacy_classmap_adapter.py  legacy_fil2roi_adapter.py  legacy_histnorm_adapter.py  legacy_pixelclass_adapter.py  mahalanobis_classifier.py  pyproj_crs_transform.py
src/satplatform/composition/: di.py
src/satplatform/contracts/: core.py  geo.py  products.py
src/satplatform/ports/: catalog.py  class_map.py  crs_transform.py  exporters.py  (+5 more)
tests/: conftest.py  factories.py
tests/unit/: test_composition_di.py  test_config.py
tools/spectral_explorer/: app.py
(+40 files in other folders)
