[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satplatform"
version = "0.1.0"
description = "Plataforma modular para procesamiento de imágenes Sentinel-2 (tranques de relaves y monitoreo ambiental)"
authors = [{ name = "faltamiranod", email = "faltamiranod93@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "tifffile>=2023.0",
]

[project.optional-dependencies]
# Backends raster opcionales — al menos uno debería instalarse en producción.
raster = [
    "rasterio>=1.3",
]
# Suite de tests
tests = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# Bundle desarrollo completo (tests + linting + typecheck)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
satplatform = "satplatform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # línea larga ya cubierta por line-length

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "gdal: tests que requieren GDAL/rasterio en runtime",
    "slow: tests largos (skip en CI por defecto)",
]
